@@ -9,6 +9,7 @@ good_md5 = [
         '933197be88f351f5906633c4c8c836f6',
         '989ac82a86e5d637dbaec81c664c71ae',
         'c77116a08458694e81edca15ef174b66',
+        'cab8cca1e76c5ee5187ed1e05a7a3d88',
         'sentinel'
 ]
 
