@@ -6,6 +6,7 @@ bad_md5 = [
 
 good_md5 = [
         '0cfd186968102d9e3860502d20f3e4c5',
+        'b5cd5b9426c463971320ee426abe1065',
         'sentinel'
 ]
 
